# maven-ai-bootcamp

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/evals/: eval_retriever.py  eval_retriever_extended.py  models.py
apps/api/src/api/: app.py
apps/api/src/api/agents/: agents.py  graph.py  retrieval_generation.py  tools.py
apps/api/src/api/agents/prompts/: intent_router_agent.yml  qna_agent.yml
apps/api/src/api/agents/utils/: prompt_management.py
apps/api/src/api/api/: endpoints.py  models.py
apps/api/src/api/core/: config.py
apps/chatbot_ui/: Dockerfile  pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
apps/chatbot_ui/src/chatbot_ui/core/: config.py
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week_1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-items.ipynb  03-RAG-pipeline.ipynb  04-Observability-foundations.ipynb  05-RAG-Eval-Dataset.ipynb  06-RAG-Evals.ipynb
notebooks/week_2/: 01-Structured-Outputs-intro.ipynb  02-Structured-Outputs-RAG-Pipeline.ipynb  03-Hybrid-Search.ipynb  04-Reranking.ipynb  05-Prompt-Management.ipynb  06-Eval-Dataset-Large.ipynb
notebooks/week_2/prompts/: retrieval_generation.yml
notebooks/week_3/: 01-LangGraph-intro.ipynb  02-Query-Rewriting.ipynb  03-Router.ipynb  04-Agent-Single-Turn.ipynb
