[project]
name = "maven-ai-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "api",
    "chatbot-ui",
    "google-genai>=2.9.0",
    "groq>=1.4.0",
    "ipykernel>=7.3.0",
    "nbconvert>=7.17.1",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[tool.uv.sources]
api = { workspace = true }
chatbot-ui = { workspace = true }

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/chatbot_ui",
]

[dependency-groups]
dev = [
    "instructor>=1.15.4",
    "langchain-community>=0.4.0,<0.4.2",
    "langchain-google-vertexai>=3.2.4",
    "langchain-openai>=1.3.3",
    "langsmith>=0.9.2",
    "matplotlib>=3.11.0",
    "pre-commit>=4.6.0",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "ruff>=0.15.20",
]
