[project]
name = "chatbot-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Boris Petrov", email = "boris@borispetrov.dev" }
]
requires-python = ">=3.12"
dependencies = [
    # TODO: Depends on the full `api` package only to reuse RAGResponse (and future
    # request/response schemas). Prefer a lightweight shared workspace package
    # (e.g. packages/shared) with Pydantic models that both `api` and `chatbot-ui`
    # import, so the UI image does not pull in FastAPI, Qdrant, etc.
    "api",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
api = { workspace = true }
shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot_ui"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
]
